Clamp the stream window without a Java 21 method
Math.clamp arrived in Java 21, and it was the only thing in common that
needed a runtime newer than 17. The 1.20 line compiles five of its six
profiles at 17, so common could not be shared with it as written.

Math.min/Math.max give the same number for the same input, and common now
compiles cleanly at --release 17, which is what lets the older Minecraft
lines carry the same networking code instead of a copy that drifts.